<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teensy_interface</name>
  <version>1.0.0</version>
  <description>Teensy ros interface</description>
  <maintainer email="jp-afman@atlrobotics.com">pablo</maintainer>
  <license>Exclusive property of ATL Robotics, USA</license>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>atl_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
